fix: fix dark mode logo color

--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -26,6 +26,20 @@
     --tk-home-max-width: 1300px;
 }
 
+.logo {
+    background-image: url(/img/logo.svg);
+    background-size: contain;
+    height: 2em;
+    width: 2em;
+}
+
+.dark .logo {
+    background-image: url(/img/logo-dark.svg);
+    background-size: contain;
+    height: 2em;
+    width: 2em;
+}
+
 .VPHero {
     background-color: aliceblue;
 }
